[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leakintel"
version = "0.1.0"
description = "Open-source leak intelligence platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["fastapi", "uvicorn[standard]"]

[project.optional-dependencies]
dev = ["pytest"]
