[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leakintel"
version = "0.1.0"
description = "Open-source leak intelligence platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic[email]>=2"
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "httpx>=0.24"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
